tests/ui/consts/rustc-impl-const-stability.stderr
error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/rustc-impl-const-stability.rs:15:12
   |
LL | impl const Default for Data {
   |            ^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0207]: the const parameter `host` is not constrained by the impl trait, self type, or predicates
  --> $DIR/rustc-impl-const-stability.rs:15:6
   |
LL | impl const Default for Data {
   |      ^^^^^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
